--- a/packages/ui-kit/src/components/tooltip/tooltip.module.scss
+++ b/packages/ui-kit/src/components/tooltip/tooltip.module.scss
@@ -1,5 +1,6 @@
 .content {
   position: relative;
+  z-index: var(--z-index-modal-content);
 
   max-width: 270px;
   padding: 8px;
@@ -29,7 +30,6 @@
 
 .arrow {
   position: absolute;
-  z-index: 100;
   top: -3px;
   left: calc(50% - 3px);
   transform: rotate(45deg);
